# telegram_anonymous_bot

./: .env  README.md  autostart_bot.sh  crontab.crn  nightly_maintenance.sh  pyproject.toml  requirements.txt  ships_keypair.pem
data/: users_DEV.csv
src/: autostart_bot.sh  bot.py
