[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-anonymous_bot"
version = "1.0.0"
description = "Anonymous bot."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Lee Cantarre", email = "lyta37@gmail.com" },
]
keywords = ["python", "packaging", "example"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-telegram-bot",
    "telegram",
    "dotenv",
]

[project.urls]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["src"] # Or find = {} for automatic discovery